--- a/.travis.yaml
+++ b/.travis.yaml
@@ -18,7 +18,7 @@ before_install:
   - docker build -t yxlee245/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run CI=true yxlee245/react-test npm test
+  - docker run -e CI=true yxlee245/react-test npm test
 
 deploy:
   provider: script
